--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Analyze and Collect Data
-subtitle: Learn everything about Data Science
+title: Data Science
+subtitle:
 use-site-title: true
 ---
 
